tests/should_fail/unknown_function.nds
-- Calling an undefined function should error at compile time.
set x to nonexistentFunction(42)
